small addition to our page content

--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!,fuck this course</title>
+	<title>Hello Coursera!</title>
 <head>
 <body>
-<h1>Hello Coursera</h1>
+<h1>Hello Coursera,fuck this course</h1>
 </body>
 </head>
 
