new addition to page

--- a/site3/index.html
+++ b/site3/index.html
@@ -4,7 +4,7 @@
 	<title>Hello Coursera!</title>
 <head>
 <body>
-<h1>Hello Coursera,yolo,whats up brother</h1>
+<h1>Hello Coursera,yolo,whats up brother,how you doing</h1>
 </body>
 </head>
 
