--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,12 @@
+<!Doctype html>
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
-<head>
-<body>
-<h1>Hello Coursera,fuck this course</h1>
-</body>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Coursera Course day 2</title>
 </head>
-
+<body>
+Coursera is tough, i hate this course
+</body>
+</html>
