--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,6 @@
 	<title>Coursera Course day 2</title>
 </head>
 <body>
-Coursera is tough, i hate this course
+Coursera is tough, i hate this course, kasam khuda ki
 </body>
 </html>
