--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,4 @@
 <!Doctype html>
-<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -7,6 +6,6 @@
 	<title>Coursera Course day 2</title>
 </head>
 <body>
-Coursera is tough, i hate this course, kasam khuda ki
+Coursera is tough, i hate this course, kasam khuda ki,what is this,ye kya bakwas hai,lol
 </body>
 </html>
