--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,27 @@
 <!Doctype html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Coursera Course day 2</title>
 </head>
 <body>
-Coursera is tough, i hate this course, kasam khuda ki,what is this,ye kya bakwas hai,lol
+	<h1>don't be afraid to be &lt; then a 100% success &amp; &gt; more</h1>
+	<div>
+		Cookie eating procedure:
+		<ol>
+			<li>open box of cookies</li>
+			<li>take out the cookies and eat it</li>
+			<li>if you want, have a glass of milk with it:
+				<ol>
+					<li>open milk carton</li>
+					<li>pour milk into a glass</li>
+				</ol>
+			</li>
+			<li>Enjoy!</li>
+		</ol>
+	</div>
+	<p>sfoisef sioehfoisejf hoisfseoidfj ohisefojseojdf osijfoijsef iosjdfoijsdf sdfknsdonsroigjosirjgoisjgoisdjgoisdjgoisjrg0owekr-oakpfosapojfgosdpagposdjgposadkgpfoksdpofkaspodkfposadkfposdkfposadkfposdkfpokaspfksapokfpaoskfpoasdkzfposkdsdjvsdvisdvijsdivjsdivisdjvijsdiddddididididididididididididididididNo victory&nbsp;or&nbsp;defeat</p>
+	<p>Sherry Copyright &copy;</p>
 </body>
 </html>
